--- a/TASK_4/GSOC_task4.ipynb
+++ b/TASK_4/GSOC_task4.ipynb
@@ -34,7 +34,7 @@
         "id": "0bdqDG5PiwfW"
       },
       "source": [
-        "## **NOTE: Intead of using the downloaded datasets, I have used the EnergyFlow python package to directly download the datset into python .**"
+        "## **NOTE: Instead of using the downloaded datasets, I have used the EnergyFlow python package to directly download the datset into python .**"
       ]
     },
     {
